fix: extra space around footer

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -57,7 +57,7 @@ main {
 }
 
 .page-footer {
-    margin-bottom: 8px;
+    margin: 1rem 0;
     text-align: center;
 }
 
